Waiting load rss, Waiting load image

--- a/app/src/main/res/layout/activity_bottom_navigate.xml
+++ b/app/src/main/res/layout/activity_bottom_navigate.xml
@@ -13,6 +13,19 @@
         android:layout_height="wrap_content"
         android:visibility="visible" />
 
+    <ProgressBar
+        android:id="@+id/download_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:visibility="gone"
+        app:layout_anchorGravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
