--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -6,6 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_new"
+            android:checked="true"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="Mới" />
         <item
