app icon, navigation menu color, facebook intergrated

--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:itemIconTint="#000000"
         app:menu="@menu/activity_navigation_drawer_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
