--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="ptl.xemvn.ItemListActivity"
-    tools:listitem="@layout/item_list_content" />
+    tools:context="ptl.xemvn.MemeListActivity"
+    tools:listitem="@layout/meme_list_card" />
