--- a/app/src/main/res/layout/fragment_tabbed.xml
+++ b/app/src/main/res/layout/fragment_tabbed.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingBottom="?attr/actionBarSize"
     android:paddingTop="?attr/actionBarSize"
-    tools:context="ptl.xemvn.PlaceholderFragment">
+    tools:context="ptl.xemvn.PostFragment">
 
 
     <ScrollView
